--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,10 +16,16 @@
   "devDependencies": {
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "8.7.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-simple-import-sort": "10.0.0",
     "postcss": "8.4.21",
+    "prettier": "2.8.4",
+    "prettier-plugin-tailwindcss": "0.2.4",
     "tailwindcss": "3.2.7",
     "typescript": "4.9.5"
   }
