--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "1.11.7",
     "next": "13.2.4",
+    "node-html-parser": "6.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
