--- a/.github/workflows/firebase-hosting-cron.yml
+++ b/.github/workflows/firebase-hosting-cron.yml
@@ -1,7 +1,8 @@
 name: Deploy to Firebase Hosting on cron
-'on':
-  schedule:
-    -cron: '0 8 15 * *'
+
+on:
+  - schedule:
+    - cron: '0 8 15 * *'
 
 jobs:
   build_and_deploy:
