--- a/.github/workflows/deploy_to_preview.yml
+++ b/.github/workflows/deploy_to_preview.yml
@@ -14,4 +14,5 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_IWDD_NET_NEXTJS }}'
+          expires: 30d
           projectId: iwdd-net-nextjs
