--- a/.github/workflows/deploy_by_cron.yml
+++ b/.github/workflows/deploy_by_cron.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
       - run: npm ci && npm run build && npm run export
