--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,9 +2,15 @@ version: 2
 updates:
   - package-ecosystem: "npm"
     directory: "/"
+    open-pull-requests-limit: 20
     schedule:
       interval: "daily"
+      time: "07:30"
+      timezone: "Asia/Tokyo"
   - package-ecosystem: "github-actions"
     directory: "/"
+    open-pull-requests-limit: 20
     schedule:
       interval: "daily"
+      time: "07:30"
+      timezone: "Asia/Tokyo"
