--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "dayjs": "1.11.11",
+    "js-yaml": "4.1.0",
     "next": "14.2.3",
     "next-sitemap": "4.2.3",
     "node-html-parser": "6.1.13",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "4.0.9",
     "@types/node": "20.12.7",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.25",
