rename started_at, ended_at to start_at, end_at

--- a/data.yml
+++ b/data.yml
@@ -3,8 +3,8 @@ events:
     title: 'IWDD (vol.209) / アイーナ816部屋 14:00〜'
     description: '<p>Webに関連する最先端のデータをするIT勉強会です。</p><ul><li>募集中</li></ul>'
     event_url: 'https://iwdd.connpass.com/event/284498/'
-    started_at: '2024-07-13T14:00:00+09:00'
-    ended_at: '2024-07-13T17:00:00+09:00'
+    start_at: '2024-07-13T14:00:00+09:00'
+    end_at: '2024-07-13T17:00:00+09:00'
     hash_tag: 'iwdd'
     place: 'アイーナ 816部屋'
     address: '岩手県盛岡市盛岡駅西通1丁目7番1号'
