--- a/data.yml
+++ b/data.yml
@@ -1,13 +1,13 @@
 events:
-  - event_id: 209
-    description: 'Webに関連する最先端のデータをするIT勉強会です。'
+  - id: 209
+    event_url: https://iwdd.connpass.com/event/284498/
+    start_at: 2024-07-13T14:00:00+09:00
+    end_at: 2024-07-13T17:00:00+09:00
+    place: アイーナ 816部屋
+    price:
+      general: 500
+      student: 0
+    hash_tags:
+      - iwdd
     topics:
-      - '募集中'
-    event_url: 'https://iwdd.connpass.com/event/284498/'
-    start_at: '2024-07-13T14:00:00+09:00'
-    end_at: '2024-07-13T17:00:00+09:00'
-    hash_tag: 'iwdd'
-    place: 'アイーナ 816部屋'
-    address: '岩手県盛岡市盛岡駅西通1丁目7番1号'
-    lat: '39.7019'
-    lon: '141.1327'
+      - 募集中
