--- a/data.yml
+++ b/data.yml
@@ -1,5 +1,5 @@
 events:
-  - id: 209
+  - vol: 209
     event_url: https://iwdd.connpass.com/event/284498/
     start_at: 2024-07-13T14:00:00+09:00
     end_at: 2024-07-13T17:00:00+09:00
