--- a/data.yml
+++ b/data.yml
@@ -1,4 +1,21 @@
 events:
+  - vol: 208
+    event_url: https://iwdd.connpass.com/event/284494/
+    start_at: 2024-06-08T14:00:00+09:00
+    end_at: 2024-06-08T17:00:00+09:00
+    place: アイーナ 816部屋
+    price:
+      general: 500
+      student: 0
+    hash_tags:
+      - iwdd
+    topics:
+      - RAG 検索拡張生成
+      - Llama
+      - Cloudflare D1
+      - Cloudflare Workers AI
+      - 音楽生成 suno.com groq.com
+      - RubyKaigi
   - vol: 209
     event_url: https://iwdd.connpass.com/event/284498/
     start_at: 2024-07-13T14:00:00+09:00
