--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev",
+    "deploy": "npm run pages:build && wrangler pages deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
     "dayjs": "1.11.11",
@@ -19,6 +23,8 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "1.12.1",
+    "@cloudflare/workers-types": "4.20240712.0",
     "@types/js-yaml": "4.0.9",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
@@ -27,12 +33,15 @@
     "cssnano": "7.0.4",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-next-on-pages": "1.12.1",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "postcss": "8.4.39",
     "prettier": "3.3.2",
     "prettier-plugin-tailwindcss": "0.6.5",
     "tailwindcss": "3.4.4",
-    "typescript": "5.5.3"
+    "typescript": "5.5.3",
+    "vercel": "34.3.1",
+    "wrangler": "3.64.0"
   }
 }
