--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "devDependencies": {
     "@cloudflare/next-on-pages": "1.13.8",
     "@cloudflare/workers-types": "4.20250303.0",
+    "@tailwindcss/postcss": "4.0.12",
     "@types/js-yaml": "4.0.9",
     "@types/node": "22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "autoprefixer": "10.4.20",
     "cssnano": "7.0.6",
     "eslint-config-next": "15.2.1",
     "eslint-config-prettier": "10.1.1",
@@ -39,7 +39,7 @@
     "postcss": "8.5.3",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.12",
     "typescript": "5.8.2",
     "vercel": "41.3.2",
     "wrangler": "3.114.0"
