--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,17 @@ updates:
     open-pull-requests-limit: 20
     schedule:
       interval: "daily"
-      time: "07:30"
+      time: "05:00"
       timezone: "Asia/Tokyo"
+    groups:
+      tailwindcss:
+        patterns:
+          - "tailwindcss"
+          - "@tailwindcss/*"
   - package-ecosystem: "github-actions"
     directory: "/"
     open-pull-requests-limit: 20
     schedule:
       interval: "daily"
-      time: "07:30"
+      time: "05:00"
       timezone: "Asia/Tokyo"
