ci: update dependabot config to include React dependencies
Reactおよび関連パッケージをDependabotの監視対象に追加しました。これにより、Reactやその型定義ファイルのアップデートを自動で追跡できるようになります。メンテナンス効率が向上することが期待されます。

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,12 @@ updates:
         patterns:
           - "tailwindcss"
           - "@tailwindcss/*"
+      react:
+        patterns:
+          - "react"
+          - "react-dom"
+          - "@types/react"
+          - "@types/react-dom"
   - package-ecosystem: "github-actions"
     directory: "/"
     open-pull-requests-limit: 20
