--- a/.github/workflows/deploy_by_cron.yml
+++ b/.github/workflows/deploy_by_cron.yml
@@ -11,7 +11,6 @@ jobs:
     strategy:
       matrix:
         runner: [ubuntu-latest]
-        node: [22]
     permissions:
       checks: write
       contents: read
@@ -21,7 +20,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
+          node-version-file: '.node-version'
       - name: npm ci
         run: npm ci
       - name: build
