--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iwdd.net-nextjs",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "engines": {
     "node": "22"
   },
@@ -10,30 +10,27 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
     "dayjs": "1.11.13",
-    "js-yaml": "4.1.0",
     "next": "15.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "1.13.12",
     "@cloudflare/workers-types": "4.20250412.0",
+    "@opennextjs/cloudflare": "1.0.0-beta.2",
     "@tailwindcss/postcss": "4.1.3",
-    "@types/js-yaml": "4.0.9",
     "@types/node": "22.14.1",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "cssnano": "7.0.6",
+    "esbuild": "0.25.2",
     "eslint-config-next": "15.3.0",
     "eslint-config-prettier": "10.1.2",
-    "eslint-plugin-next-on-pages": "1.13.12",
     "eslint-plugin-prettier": "5.2.6",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "postcss": "8.5.3",
@@ -41,7 +38,6 @@
     "prettier-plugin-tailwindcss": "0.6.11",
     "tailwindcss": "4.1.3",
     "typescript": "5.8.3",
-    "vercel": "41.6.0",
-    "wrangler": "4.10.0"
+    "wrangler": "^4.10.0"
   }
 }
