--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ],
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./src/styles/globals.css",
+  "tailwindPreserveWhitespace": true,
+  "tailwindPreserveDuplicates": true,
   "semi": false,
   "singleQuote": true
 }
