--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
@@ -30,15 +31,16 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20250412.0",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.24.0",
     "@opennextjs/cloudflare": "1.0.0-beta.2",
     "@tailwindcss/postcss": "4.1.3",
     "@types/node": "22.14.1",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "cssnano": "7.0.6",
-    "esbuild": "0.25.2",
+    "eslint": "9.24.0",
     "eslint-config-next": "15.3.0",
-    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-prettier": "5.2.6",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "postcss": "8.5.3",
@@ -46,6 +48,6 @@
     "prettier-plugin-tailwindcss": "0.6.11",
     "tailwindcss": "4.1.3",
     "typescript": "5.8.3",
-    "wrangler": "^4.10.0"
+    "wrangler": "4.10.0"
   }
 }
