--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "cssnano": "7.0.6",
+    "esbuild": "0.25.2",
     "eslint": "9.24.0",
     "eslint-config-next": "15.3.0",
     "eslint-plugin-prettier": "5.2.6",
