--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "esbuild": "0.27.0",
     "eslint": "9.39.1",
     "eslint-config-next": "15.5.5",
+    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "postcss": "8.5.6",
