--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
   "name": "iwdd.net-nextjs",
   "version": "0.3.0",
+  "type": "module",
   "engines": {
     "node": "22"
   },
-  "cpu": [
-    "x64",
-    "arm64"
-  ],
-  "os": [
-    "linux",
-    "darwin"
-  ],
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
     "dayjs": "1.11.19",
-    "next": "15.5.5",
+    "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "4.20251118.0",
-    "@eslint/eslintrc": "3.3.3",
-    "@eslint/js": "9.39.1",
     "@opennextjs/cloudflare": "1.13.0",
     "@tailwindcss/postcss": "4.1.17",
     "@types/node": "24.10.1",
@@ -41,11 +30,10 @@
     "cssnano": "7.1.2",
     "esbuild": "0.27.0",
     "eslint": "9.39.1",
-    "eslint-config-next": "15.5.5",
+    "eslint-config-next": "16.0.6",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-simple-import-sort": "12.1.1",
-    "postcss": "8.5.6",
     "prettier": "3.7.3",
     "prettier-plugin-tailwindcss": "0.7.1",
     "tailwindcss": "4.1.17",
