--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         runner: [ubuntu-latest]
-        node: [22.20.0]
+        node: [24]
     name: build on node ${{ matrix.node }} ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v6
@@ -22,5 +22,7 @@ jobs:
         run: npm ci
       - name: eslint
         run: npm run lint
+      - name: test
+        run: npm run test
       - name: build
         run: npm run build
