--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "24"
   },
+  "packageManager": "pnpm@10.25.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
