ci: pnpm を使用するように CI を更新
- pnpm/action-setup を追加
- npm ci を pnpm install --frozen-lockfile に変更
- npm run コマンドを pnpm に変更

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,13 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node }}
-      - name: npm ci
-        run: npm ci
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+      - name: pnpm install
+        run: pnpm install --frozen-lockfile
       - name: eslint
-        run: npm run lint
+        run: pnpm lint
       - name: test
-        run: npm run test
+        run: pnpm test
       - name: build
-        run: npm run build
+        run: pnpm build
