build: pnpm セキュリティ設定を追加
- minimumReleaseAge: 3日間の猶予期間
- onlyBuiltDependencies: ビルドスクリプト許可リスト

--- a/package.json
+++ b/package.json
@@ -42,5 +42,14 @@
     "typescript": "5.9.3",
     "vitest": "4.0.15",
     "wrangler": "4.54.0"
+  },
+  "pnpm": {
+    "minimumReleaseAge": "3 days",
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp",
+      "unrs-resolver",
+      "workerd"
+    ]
   }
 }
