--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         runner: [ubuntu-latest]
         node: [24]
-    name: build on node ${{ matrix.node }} ${{ matrix.runner }}
+    name: Build on Node ${{ matrix.node }} ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v6
       - name: Setup Node
@@ -20,20 +20,20 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-      - name: pnpm install
+      - name: Install Dependencies
         run: pnpm install --frozen-lockfile
-      - name: eslint
+      - name: Lint
         run: pnpm lint
-      - name: test
+      - name: Test
         run: pnpm test
-      - name: build
+      - name: Build
         run: pnpm build
 
   e2e:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     needs: ci
-    name: E2E tests
+    name: E2E Tests
     steps:
       - uses: actions/checkout@v6
       - name: Setup Node
@@ -42,13 +42,13 @@ jobs:
           node-version: 24
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-      - name: pnpm install
+      - name: Install Dependencies
         run: pnpm install --frozen-lockfile
-      - name: Install Playwright browsers
+      - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps chromium
-      - name: Run E2E tests
+      - name: Run E2E Tests
         run: pnpm test:e2e
-      - name: Upload Playwright report
+      - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
