--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.2.4"
   },
   "devDependencies": {
+    "@eslint/compat": "^2.0.2",
     "@opennextjs/cloudflare": "1.16.4",
     "@playwright/test": "1.58.2",
     "@tailwindcss/postcss": "4.1.18",
